--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,13 @@
 	"version": "1.0",
 	"manifest_version":2,
 	"description": "Calculates GPA on Infinite Campus",
+	"icons":
+	{
+		"16":"16x16logo.png",
+		"48":"48x48logo.png",
+		"128":"128x128logo.png",
+		"192":"192x192logo.png"
+	},
 	"content_scripts":
 	[
 		{
@@ -19,7 +26,7 @@
 	],
 	"browser_action":
 	{
-		"default_icon": "icon.jpg",
+		"default_icon": "192x192logo.png",
 		"default_popup": "popup.html",
 		"default_title": "A popup will be here."
 	}
