--- a/manifest.json
+++ b/manifest.json
@@ -13,16 +13,15 @@
 	"content_scripts":
 	[
 		{
-		"matches": ["https://*.naperville203.org/*"],
+		"matches": ["https://infinitecampus.*.org/*"],
 		"js": ["js/background.js"]
 		}
 	],
 	"permissions":
 	[
-		"contextMenus",
 		"activeTab",
 		"tabs",
-		"https://*.naperville203.org/*"
+		"https://infinitecampus.*.org/*"
 	],
 	"browser_action":
 	{
